# sgleam

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  check.gleam  deno.json  sgleam.gleam  sgleam.mjs  sgleam_ffi.mjs
.github/workflows/: ci.yaml  release.yaml
cli/: Cargo.toml
cli/src/: config.rs  main.rs  repl_reader.rs  stepper_display.rs
cli/tests/: cli.rs
cli/tests/images/: add_curve1.gleam  add_curve2.gleam  add_curve3.gleam  add_line1.gleam  add_wedge1.gleam  beside_align1.gleam  flip_horizontal1.gleam  flip_vertical1.gleam  place_curve1.gleam  place_image1.gleam  pulled_regular_polygon1.gleam  text1.gleam  triangle1.gleam  wedge2.gleam  world1.gleam
cli/tests/inputs/: check_eq.gleam  helper.gleam  main_panic.gleam  main_stackoverflow.gleam  runtime_panic.gleam  smain.gleam  smain_alias.gleam  smain_int_nil.gleam  smain_string.gleam  stepper_factorial.gleam  stepper_multi_main.gleam  user.gleam
cli/tests/snapshots/: cli__repl_error_expr.snap  cli__repl_error_let.snap  cli__repl_error_multiline_expr.snap  cli__repl_import_alias_shadows_module.snap  cli__repl_import_alias_then_unqualified.snap  cli__repl_import_const_shadows_unqualified.snap  cli__repl_import_fn_shadows_alias_then_reimport.snap  cli__repl_import_let_shadows_alias.snap  cli__repl_import_re_import_restores_name.snap  cli__repl_import_shadow_debug.snap  cli__repl_import_unqualified_survives_alias_shadow.snap  cli__repl_import_unqualified_then_alias.snap  cli__repl_import_var_shadows_unqualified.snap  cli__run_file@.invalid.gleam.snap  cli__run_file@check_todo_panic_stackoverflow.gleam.snap  cli__run_file@main_empty.gleam.snap  cli__run_file@main_nil_int.gleam.snap  cli__run_file@main_panic.gleam.snap  cli__run_file@main_stackoverflow.gleam.snap  cli__run_file@main_stackoverflow_mutual.gleam.snap  cli__run_file@main_stackoverflow_stdlib.gleam.snap  cli__run_file@smain.gleam.snap  cli__run_images@above_align1.gleam.snap  cli__run_images@beside_align1.gleam.snap  cli__run_images@circle1.gleam.snap  cli__run_images@crop1.gleam.snap  cli__run_images@ellipse1.gleam.snap  cli__run_images@empty_scene1.gleam.snap  cli__run_images@flip_vertical1.gleam.snap  cli__run_images@frame1.gleam.snap  cli__run_images@line1.gleam.snap  cli__run_images@overlay1.gleam.snap  cli__run_images@overlay_align1.gleam.snap  cli__run_images@overlay_xy1.gleam.snap  cli__run_images@place_image_align1.gleam.snap  cli__run_images@place_polygon1.gleam.snap  cli__run_images@radial_star1.gleam.snap  cli__run_images@rectangle1.gleam.snap  cli__run_images@regular_polygon1.gleam.snap  cli__run_images@right_triangle1.gleam.snap  (+9 more)
docs/: build-docs.sh  gen_images.gleam  gleam-inline.lua  gleam-repl.xml  gleam.xml  inject-images.lua  one-light.theme  style.css  theme-toggle.html
docs/en/: cli.md  images.md  index-cli.md  index-web.md  web.md  world.md
docs/pt-br/: cli.md  imagens.md  index-cli.md  index-web.md  mundo.md  web.md
engine/: Cargo.toml  build.rs
engine/sgleam/: fill.gleam  image.gleam  math.gleam  sgleam_ffi.mjs  stroke.gleam  style.gleam  system.gleam  world.gleam  yplace.gleam
engine/src/: error.rs  fonts.rs  format.rs  gleam.rs  lib.rs  output.rs  parser.rs  quickjs.rs  repl.rs  run.rs  stepper.rs  text_metrics.rs
engine/src/substitution/: convert.rs  mod.rs  reduce.rs  render.rs  runtime_vars.rs  validate.rs
examples/: ball.gleam  circle_animation.gleam  colors.gleam  move_square.gleam
lib/sgleam/: color.gleam  font.gleam  image.gleam  sgleam_ffi.mjs  style.gleam  system.gleam  world.gleam
sgleam/: check.gleam  color.gleam  create.gleam  fill.gleam  image.gleam  imagef.gleam  math.gleam  sgleam_ffi.mjs  stroke.gleam  style.gleam  system.gleam  world.gleam  xplace.gleam
sgleam-core/: Cargo.toml  build.rs
sgleam-core-tests/: Cargo.toml
sgleam-core-tests/tests/: integration.rs
sgleam-core/sgleam/: font.gleam  image.gleam  io.gleam  sgleam_ffi.mjs  stroke.gleam  style.gleam  system.gleam  world.gleam
sgleam-core/src/: engine.rs  error.rs  gleam.rs  lib.rs  logger.rs  panic.rs  quickjs.rs  repl.rs  repl_reader_wasm.rs  run.rs  text_metrics.rs
src/: engine.rs  error.rs  exports.rs  format.rs  gleam.rs  javascript.rs  lib.rs  main.rs  panic.rs  parser.rs  quickjs.rs  repl.rs  repl_reader.rs  repl_reader_wasm.rs  run.rs
tests/: Cargo.toml  cli.rs
tests/images/: above1.gleam  above_align1.gleam  beside1.gleam  beside_align1.gleam  circle1.gleam  crop1.gleam  ellipse1.gleam  empty_scene1.gleam  frame1.gleam  isosceles_triangle1.gleam  line1.gleam  overlay_align1.gleam  overlay_align_offset1.gleam  overlay_xy1.gleam  place_image_align1.gleam  place_polygon1.gleam  polygon1.gleam  put_image1.gleam  radial_star1.gleam  rotate1.gleam  scale1.gleam  square1.gleam  star_polygon1.gleam  underlay_align1.gleam  underlay_offset1.gleam
tests/inputs/: check_approx.gleam  check_todo_panic_stackoverflow.gleam  check_true_false.gleam  hello_world.gleam  main_erlang.gleam  main_int_nil.gleam  main_list_string.gleam  main_nil_int.gleam  main_stackoverflow_mutual.gleam  main_stackoverflow_stdlib.gleam  main_string.gleam  smain_list_string.gleam
tests/snapshots/: cli__run_file@.invalid.gleam.snap  cli__run_file@Invalid.gleam.snap  cli__run_file@check_approx.gleam.snap  cli__run_file@check_eq.gleam.snap  cli__run_file@check_todo_panic_stackoverflow.gleam.snap  cli__run_file@check_true_false.gleam.snap  cli__run_file@gleam.gleam.snap  cli__run_file@hello_world.gleam.snap  cli__run_file@main_empty.gleam.snap  cli__run_file@main_erlang.gleam.snap  cli__run_file@main_int.gleam.snap  cli__run_file@main_int_nil.gleam.snap  cli__run_file@main_list_string.gleam.snap  (+51 more)
wasm/: Cargo.toml  sgleam.ts
wasm/src/: lib.rs
wasm/tests/: wasi.ts  wasm_test.ts
web/: ansi_test.ts  channel.ts  channel_test.ts  dirty.ts  dirty_test.ts  env.ts  env_test.ts  image_browser_test.ts  image_test.ts  inline.ts  manifest.json  player.html  player.ts  repl.js  repl.ts  service-worker.js  sgleam.html  sgleam.js  test.js  test.ts  text_browser_test.ts  ui.ts  ui_channel.ts  wasi.ts  wasi_test.ts  worker.ts  worker_channel.ts
(+395 files in other folders)
