[package]
name = "sgleam"
version = "0.3.1"
edition = "2021"

[dependencies]
camino = "1.1.9"
clap = { version = "4", features = ["derive"] }
dirs = "5"
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "javascript-bigint" }
im = "15.1.0"
rquickjs = { git = "https://github.com/malbarbo/rquickjs", branch = "fix-gleam-stdlib", features = ["loader"] }
rustyline = { version = "14", features = ["derive"] }
tar = "0.4.41"
termcolor = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
vec1 = "1.12.1"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
