[package]
name = "sgleam"
version = "0.5.0-dev"
edition = "2021"
default-run = "sgleam"

[dependencies]
camino = "1.1.9"
clap = { version = "4", features = ["derive"] }
dirs = "5"
ecow = "0.2.3"
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam" }
im = "15.1.0"
indoc = "2.0.5"
rquickjs = { git = "https://github.com/malbarbo/rquickjs", branch = "fix-gleam-stdlib", features = [
    "loader",
] }
tar = "0.4.41"
termcolor = "1"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
vec1 = "1.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.6"
rustyline = { version = "14", features = ["derive"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2.0.16"
insta = { version = "1.41.1", features = ["glob"] }
