[package]
name = "sgleam"
version = "0.6.0"
edition = "2021"
default-run = "sgleam"

[dependencies]
camino = "1.1.9"
clap = { version = "4", features = ["derive"] }
dirs = "5"
ecow = "0.2.3"
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam-0.6", features = [
    "disable-erlang", "disable-hide-internal",
] }
im = "15.1.0"
indoc = "2.0.5"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs", features = [
    "loader",
] }
rust-embed = "8.7.2"
tar = "0.4.41"
termcolor = "1"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
vec1 = "1.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.6"
rustyline = { version = "14", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
insta = { version = "1.41.1", features = ["glob"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

[profile.release-small]
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"
