[package]
name = "sgleam"
version = "0.7.0"
edition = "2021"
default-run = "sgleam"

[dependencies]
sgleam-core = { path = "../sgleam-core" }
camino = "1.1.9"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rustyline = { version = "14", features = ["derive"] }
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam-0.7", default-features = false, features = [
    "disable-erlang", "disable-hide-internal",
] }

[dev-dependencies]
assert_cmd = "2.1"
indoc = "2.0.5"
insta = "1.41.1"
