[package]
name = "sgleam"
version = "0.7.0"
edition = "2024"
default-run = "sgleam"

[dependencies]
engine = { path = "../engine" }
camino = "1.1.9"
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
dirs = "5"
rustyline = { git = "https://github.com/malbarbo/rustyline.git", features = ["derive", "custom-bindings"] }
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam-0.7", default-features = false, features = [
    "disable-erlang", "disable-hide-internal",
] }

[features]
resvg = ["engine/resvg"]

[dev-dependencies]
assert_cmd = "2.1"
indoc = "2.0.5"
insta = "1.41.1"
