[package]
name = "engine"
version = "0.7.0"
edition = "2024"

[dependencies]
base64 = "0.22"
camino = "1.1.9"
ecow = "0.2.3"
flate2 = "1"
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam-0.7", default-features = false, features = [
    "disable-erlang", "disable-hide-internal",
] }
im = "15.1.0"
indoc = "2.0.5"
rquickjs = { version = "0.11.0", features = ["loader"] }
rust-embed = "8.7.2"
tar = "0.4.41"
termcolor = "1"
thiserror = "2.0.3"
tracing = "0.1.40"
vec1 = "1.12.1"

[build-dependencies]
flate2 = "1"
tar = "0.4.41"

[features]
capture = []
resvg = ["dep:resvg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.6"
resvg = { version = "0.47", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
