[package]
name = "engine"
version = "0.8.0-dev"
edition = "2024"

[dependencies]
base64 = "0.22"
camino = "1.1.9"
ecow = "0.2.3"
flate2 = "1"
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam-0.8", default-features = false, features = [
    "disable-erlang", "disable-hide-internal",
] }
im = "15.1.0"
indoc = "2.0.5"
num-bigint = "0.4"
rquickjs = { version = "0.11.0", features = ["loader"] }
rust-embed = { version = "8.7.2", features = ["debug-embed"] }
tar = "0.4.41"
termcolor = "1"
thiserror = "2.0.3"
tracing = "0.1.40"
vec1 = "1.12.1"

[build-dependencies]
flate2 = "1"
tar = "0.4.41"

[features]
capture = []
resvg = ["dep:resvg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.6"
resvg = { version = "0.47", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
