[package]
name = "sgleam-core"
version = "0.7.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
ecow = "0.2.3"
flate2 = "1"
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam-0.7", features = [
    "disable-erlang", "disable-hide-internal",
] }
im = "15.1.0"
indoc = "2.0.5"
rquickjs = { version = "0.11.0", features = ["loader"] }
rust-embed = "8.7.2"
tar = "0.4.41"
termcolor = "1"
thiserror = "2.0.3"
tracing = "0.1.40"
vec1 = "1.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.6"
dirs = "5"
rustyline = { version = "14", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
