[package]
name = "wasm"
version = "0.8.0-dev"
edition = "2024"

[lib]
name = "sgleam"
crate-type = ["cdylib"]

[dependencies]
engine = { path = "../engine" }
camino = "1.1.9"
gleam-core = { git = "https://github.com/malbarbo/gleam.git", branch = "sgleam-0.7", default-features = false, features = [
    "disable-erlang", "disable-hide-internal",
] }
